# notescript

./: README.md  Untitled score.musicxml  cli.py  demo.musicxml  interpreter.py  parser.py  pyproject.toml  test.py
