[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NoteScript"
version = "1.0.1"
description = "."
authors = [
  { name = "Astra C.", email = "astra.the.boop@icloud.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "argparse>=1.4.0",
  "music21",
]
